pingPongApp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app
  labels:
    app: ping-pong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      name: ping-pong-app
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: ping-pong-app
          image: ping-pong-app:1.0
          imagePullPolicy: Never
