pingPongApp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - name: ping-pong-app
      protocol: TCP
      port: 2500
      targetPort: 8080
    - name: log-app
      protocol: TCP
      port: 2600
      targetPort: 8090
